Initial addition of content.

--- a/jors2016.bib
+++ b/jors2016.bib
@@ -18,3 +18,20 @@
   pages = 	 {931-949}
 }
 
+@inproceedings{reetz-et-al:2006,
+  title =	 {Superflick: a natural and efficient technique for long-distance object placement on digital tables},
+  author =	 {Adrian Reetz and Carl Gutwin and Tadeusz Stach and Miguel Nacenta and Sriram Subramanian},
+  booktitle =	 {Proceedings of Graphics interface 2006},
+  pages =	 {163--170},
+  year =	 {2006},
+  organization =	 {Canadian Information Processing Society}
+}
+
+@inproceedings{alagha-et-al:2010,
+  title =	 {Towards a teacher-centric approach for multi-touch surfaces in classrooms},
+  author =	 {Iyad AlAgha and Andrew Hatch and Linxiao Ma and Liz Burd},
+  booktitle =	 {ACM International Conference on Interactive Tabletops and Surfaces},
+  pages =	 {187--196},
+  year =	 {2010},
+  organization =	 {ACM}
+}
